samples/_failures_safe/1761555120_661d68_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d525dbee.c: In function ‘main’:
./samples/SAFE/__tmp_d525dbee.c:158:9: error: expected expression at end of input
  158 |         free_matrix(&
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_d525dbee.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d525dbee.c:158:9: error: expected declaration or statement at end of input
